Rendering initial map view

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,8 @@ target 'PrivateKit' do
   pod 'GoogleMaps'
   pod 'Google-Maps-iOS-Utils'
   
+  pod 'react-native-maps', :path => '../node_modules/react-native-maps'
+
   target 'PrivateKitTests' do
     inherit! :search_paths
     # Pods for testing
