--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-i18n": "^2.0.15",
     "react-native-map-clustering": "^3.1.2",
-    "react-native-maps": "0.27.1",
+    "react-native-maps": "^0.27.1",
     "react-native-popup-menu": "^0.15.7",
     "react-native-push-notification": "^3.1.9",
     "react-native-safe-area-context": "0.6.0",
