--- a/ios/Podfile
+++ b/ios/Podfile
@@ -44,6 +44,11 @@ target 'PrivateKit' do
   
   pod 'react-native-maps', :path => '../node_modules/react-native-maps'
 
+  # add the Firebase pod for Google Analytics
+  pod 'Firebase/Analytics'
+  # add pods for any other desired Firebase products
+  # https://firebase.google.com/docs/ios/setup#available-pods
+
   target 'PrivateKitTests' do
     inherit! :search_paths
     # Pods for testing
