--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-native-community/push-notification-ios": "^1.1.0",
     "@react-native-community/viewpager": "^3.3.0",
+    "@react-native-firebase/app": "^6.3.4",
+    "@react-native-firebase/database": "^6.3.4",
     "@react-navigation/native": "5.0.9",
     "@react-navigation/stack": "5.1.1",
     "i18next": "^19.3.3",
@@ -45,6 +47,7 @@
     "react-native-background-timer": "^2.2.0",
     "react-native-ble-advertiser": "0.0.5",
     "react-native-extended-stylesheet": "^0.12.0",
+    "react-native-firebase": "^5.6.0",
     "react-native-fs": "^2.16.6",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-i18n": "^2.0.15",
