connected to firebase

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -46,6 +46,7 @@ target 'PrivateKit' do
 
   # add the Firebase pod for Google Analytics
   pod 'Firebase/Analytics'
+  pod 'Firebase/Database'
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
 
