--- a/ios/Podfile
+++ b/ios/Podfile
@@ -50,6 +50,8 @@ target 'PrivateKit' do
   # add pods for any other desired Firebase products
   # https://firebase.google.com/docs/ios/setup#available-pods
 
+  pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
+
   target 'PrivateKitTests' do
     inherit! :search_paths
     # Pods for testing
