vector icons and changed new entry btn

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -52,6 +52,8 @@ target 'PrivateKit' do
 
   pod 'react-native-geolocation', :path => '../node_modules/@react-native-community/geolocation'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
   target 'PrivateKitTests' do
     inherit! :search_paths
     # Pods for testing
