--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-share": "^3.1.0",
     "react-native-uuid-generator": "^6.1.1",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-webview": "^8.1.2",
     "react-native-zip-archive": "^5.0.1",
     "rn-fetch-blob": "^0.12.0"
