--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-app-intro-slider": "^3.0.0",
     "react-native-background-timer": "^2.2.0",
     "react-native-ble-advertiser": "0.0.5",
+    "react-native-date-picker": "^2.7.8",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-firebase": "^5.6.0",
     "react-native-fs": "^2.16.6",
