--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-native-firebase/database": "^6.3.4",
     "@react-navigation/native": "5.0.9",
     "@react-navigation/stack": "5.1.1",
+    "firebase-tools": "^8.0.1",
     "i18next": "^19.3.3",
     "lodash": "4.17.15",
     "moment": "^2.24.0",
