--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,7 +129,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "edu.mit.privatekit"
+        applicationId "com.risk_indicator.app"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         multiDexEnabled true
@@ -215,8 +215,11 @@ dependencies {
        exclude group: 'com.google.android.gms', module: 'play-services-base'
        exclude group: 'com.google.android.gms', module: 'play-services-maps'
     }
+
     implementation 'com.google.android.gms:play-services-base:10.0.1'
     implementation 'com.google.android.gms:play-services-maps:10.0.1'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    // implementation 'com.google.firebase:firebase-common:11.0.1'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
 }
 
@@ -236,11 +239,11 @@ dependencies {
        }
      }
     //end
-     jcenter()
-       maven {
-         url "https://maven.google.com"
-       }
-     }
+        jcenter()
+        maven {
+            url "https://maven.google.com"
+        }
+    }
  }
 
 // Run this once to be able to run the application with BUCK
