--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-maps": "^0.27.1",
     "react-native-popup-menu": "^0.15.7",
     "react-native-push-notification": "^3.1.9",
+    "react-native-rename": "^2.4.1",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-share": "^3.1.0",
